# Workspace

./: .gitignore  README.md  check_prerequis_tp.sh  generate_proto.sh
cpp-project/: CMakeLists.txt  CMakePresets.json  bridge.cpp  bridge.h  main.cpp  vcpkg.json
java-project/: pom.xml
java-project/src/main/java/com/project/: CsvTableEngine.java  CsvVirtualTable.java  Database.java  H2Database.java  Main.java  MainCpp.java  NativeStats.java  PythonBridge.java  ReportService.java  StatsFunctions.java  TablePrinter.java
java-project/src/main/java/com/project/proto/: FilterRequestOuterClass.java  filter.proto  generate_proto.sh
java-project/src/main/java/com/project/udf/: EcartTypePythonAggregate.java  MoyenneAggregate.java  NativeEcartTypeAggregate.java  NativeMoyenneAggregate.java
java-project/src/main/python/: stats.py  std.py
